# obs-switch-pro

./: Cargo.toml
frontend/: app.js  app.ts  index.html  package.json
src/: main.rs
