[package]
name = "obs-switch-pro"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.17", features = ["full"] }
warp = "0.2"
futures = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
hex = "0.4.2"
